[package]
name = "tetris"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2= "0.35.2"



[features]
default=["sdl2/image"] # by default you can't use the image module with sdl2, we need to activate it.  